# svg-tool-functions

./: .gitignore  README.md  integuer_equation.py
doc/: CONFIGURE.md  INSTALL.md  README.md  TESTING.md  UPLOAD.md
example/: example1.py  example2.py  example3.py  output.eps  output.svg.eps  system_formatter.py  teste1.py  teste2.py
example/visual_linear_systems/: integuer_equation.py  svg_grid.py
refman/: generate-refman.sh
src/: README.md  program_launcher.py  pyproject.toml  setup.py  toml_gen.py
src/svg_tool_functions/: __init__.py  core.py
src/svg_tool_functions/from_filepath/: __init__.py  convert_to_eps.py
src/svg_tool_functions/from_svgpath/: __init__.py  binary_convert_to_eps.py  get_dimensions.py  inkscape_convert_to.py  rsvg_convert_to_eps.py  svg_to_plain_svg.py  svg_to_svg.py
src/svg_tool_functions/from_text/: __init__.py  chars_to_svg.py
src/visual_linear_systems/: about.py  integuer_equation.py  pipeline.py  program.py  system_formatter.py
src/visual_linear_systems/modules/: resources.py  svg_grid.py  wabout.py
