[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual_linear_systems"
version = "0.1.0"
description = "Functions to draw linear systems in a funny way"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "pandas"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-pylibs/VisualLinearSystems/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-pylibs/VisualLinearSystems/tree/main/doc"
"Source" = "https://github.com/trucomanx-pylibs/VisualLinearSystems"

[project.scripts]
"visual-linear-systems-info" = "visual_linear_systems.program:main"

[tool.setuptools]
packages = ["visual_linear_systems", "visual_linear_systems.modules"]

[tool.setuptools.package-data]
"visual_linear_systems" = ["data/logo.png", "data/logo.svg"]
